# cpp_pdf_convert

./: .gitignore  BUILD_ENVIRONMENT.md  CMakeLists.txt  build_app.sh  build_mupdf.sh  main.cpp  make_linux.sh  types.h  validators.cpp  validators.h
handlers/convert_to_img/: dto.h  handler.cpp  handler.h  rules.cpp  rules.h
handlers/copy/: dto.h  handler.cpp  handler.h  rules.cpp  rules.h
handlers/help/: dto.h  handler.cpp  handler.h  rules.cpp  rules.h
handlers/test/: dto.h  handler.cpp  handler.h  rules.cpp  rules.h
